# src/routes/index.js
@@ -7,6 +7,11 @@ import { authenticateToken } from "../middlewares/authMiddleware.js";
 
 const router = Router();
 
+// Verifica se a API está funcionando
+router.get("/health", (req, res) => {
+  res.status(200).json({ status: "ok" });
+});
+
 router.use(login);
 // Todas as rotas abaixo exigem autenticação
 router.use(authenticateToken);
